ex2/Parser.java
/* Parser.java */
/* Generated By:JavaCC: Do not edit this line. Parser.java */
import java.io.*;

public class Parser implements ParserConstants {
    //記号表用疑似構�??�?
        public static class s_table{
            public String  var;
            public int    address;
            public int    value;
    }
    public static int count=0;
    public static int pc=1;
    public static int op_type=0;

        //抽象機械命令
        public static int push     = 1;
        public static int load     = 2;
        public static int store    = 3;
        public static int jpc      = 4;
        public static int jmp      = 5;
        public static int op       = 6;
        public static int label    = 7;
    //rjmp=8,restore=9
    public static int par      = 10;
        public static int nop      = 0;

        public static void main(String args[]){
        long startTime = System.currentTimeMillis();
            s_table[] arr_table = new s_table[50];
                for(int i=0;i < 50; i++){
                        arr_table[i] = new s_table();
                }
                try {
                        Parser parser = new Parser(new FileReader(args[0]));
            FileWriter table = new FileWriter("table.txt");
            FileWriter code = new FileWriter("code.txt");
                        parser.Program(arr_table);
            for(int j=0;j<count;j++){
                                table.write(""+String.format("%10s",arr_table[j].var)+" "+String.format("%2d",arr_table[j].address)+" "+String.format("%5d",arr_table[j].value)+"\u005cn");
                        }
                        table.close();
            code.close();
                }catch(Exception ex){
                        ex.printStackTrace();
                        System.err.println("Failed parse:"+ex.getMessage());
                }
        long endTime = System.currentTimeMillis();
        System.out.println("elapsed_time: "+ (endTime - startTime)/1000.0 + " [sec]");
        }

  static final public void Program(s_table[] arr_table) throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case WHILE:
    case VAR:
    case IF:
    case NOP:
    case VARIABLE:{
      Statement(arr_table);
      Program2(arr_table);
      break;
      }
    default:
      jj_la1[0] = jj_gen;
      Program2(arr_table);
    }
  }

  static final public void Program2(s_table[] arr_table) throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case SEMICOLON:{
      jj_consume_token(SEMICOLON);
      Program(arr_table);
      Program2(arr_table);
      break;
      }
    case PAR:{
      jj_consume_token(PAR);
try{
        FileWriter code = new FileWriter("code.txt",true);
        code.write(String.format("%2d ",Parser.par));
        code.write("    0\u005cn");
        ++Parser.pc;
        code.close();
    }catch(IOException e){
        System.err.println("err");
    }
      jj_consume_token(LBRACE);
      Program(arr_table);
      jj_consume_token(RBRACE);
try{
        FileWriter code = new FileWriter("code.txt",true);
        code.write(String.format("%2d ",Parser.par));
        code.write("    1\u005cn");
        ++Parser.pc;
        code.close();
    }catch(IOException e){
        System.err.println("err");
    }
      label_1:
      while (true) {
try{
        FileWriter code = new FileWriter("code.txt",true);
        code.write(String.format("%2d ",Parser.par));
        code.write("    0\u005cn");
        ++Parser.pc;
        code.close();
    }catch(IOException e){
        System.err.println("err");
    }
        jj_consume_token(LBRACE);
        Program(arr_table);
        jj_consume_token(RBRACE);
try{
        FileWriter code = new FileWriter("code.txt",true);
        code.write(String.format("%2d ",Parser.par));
        code.write("    1\u005cn");
        ++Parser.pc;
        code.close();
    }catch(IOException e){
        System.err.println("err");
    }
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case LBRACE:{
          ;
          break;
          }
        default:
          jj_la1[1] = jj_gen;
          break label_1;
        }
      }
      break;
      }
    default:
      jj_la1[2] = jj_gen;

    }
  }

  static final public void Statement(s_table[] arr_table) throws ParseException {Token token1; Token token2;int jlabel=0;int jlabel2=0;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case VARIABLE:{
      token1 = jj_consume_token(VARIABLE);
      jj_consume_token(EQ);
      Expression(arr_table);
try{
        int type1=0;
                int address1=0;
                FileWriter code = new FileWriter("code.txt",true);
        for(int i=0;i<Parser.count;i++){
                        if(arr_table[i].var.equals(token1.image)){
                                address1=arr_table[i].address;
                                break;
                        }
                }
                code.write(String.format("%2d ",Parser.store));
                code.write(String.format("%5d\u005cn",address1));
                code.close();
        ++Parser.pc;
    }catch(IOException e){
        System.err.println("err");
    }
      break;
      }
    case IF:{
      jj_consume_token(IF);
      B(arr_table);
      jj_consume_token(THEN);
try{
        FileWriter code = new FileWriter("code.txt",true);
        code.write(String.format("%2d ",Parser.jpc));
        code.write(String.format("%5d\u005cn",Parser.pc+2));
        ++Parser.pc;
        jlabel=Parser.pc;
        code.write(String.format("%2d ",Parser.jmp));
        code.write("    0\u005cn");
        ++Parser.pc;
        code.write(String.format("%2d ",Parser.label));
        code.write("    0\u005cn");
        ++Parser.pc;
        code.close();
    }catch(IOException e){
        System.err.println("err");
    }
      Program(arr_table);
try{
        FileWriter code = new FileWriter("code.txt",true);
        jlabel2=Parser.pc;
        code.write(String.format("%2d ",Parser.jmp));
        code.write("    0\u005cn");
        ++Parser.pc;
        code.close();
        RandomAccessFile raf = new RandomAccessFile("code.txt","rw");
        for(int i=0;i<9*jlabel-6;i++){
            raf.read();
        }
        String s = String.format("%5d",Parser.pc);
        raf.write(s.getBytes());
        raf.close();
        FileWriter code2 = new FileWriter("code.txt",true);
        code2.write(String.format("%2d ",Parser.label));
        code2.write("    0\u005cn");
        ++Parser.pc;
        code2.close();
    }catch(IOException e){
        System.err.println("err");
    }
      jj_consume_token(ELSE);
      Program(arr_table);
try{
        FileWriter code = new FileWriter("code.txt",true);
        code.write(String.format("%2d ",Parser.label));
        code.write("    0\u005cn");
        ++Parser.pc;
        code.close();
                RandomAccessFile raf = new RandomAccessFile("code.txt","rw");
        for(int i=0;i<9*jlabel2-6;i++){
            raf.read();
        }
        String s = String.format("%5d",Parser.pc-1);
        raf.write(s.getBytes());
        raf.close();
    }catch(IOException e){
        System.err.println("err");
    }
      jj_consume_token(END);
      break;
      }
    case WHILE:{
      jj_consume_token(WHILE);
try{
        jlabel2 = Parser.pc;
        FileWriter code = new FileWriter("code.txt",true);
        code.write(String.format("%2d ",Parser.label));
        code.write("    0\u005cn");
        ++Parser.pc;
        code.close();
        }catch(IOException e){
                System.err.println("err");
        }
      B(arr_table);
try{
                FileWriter code = new FileWriter("code.txt",true);
        code.write(String.format("%2d ",Parser.jpc));
        code.write(String.format("%5d\u005cn",Parser.pc+2));
        ++Parser.pc;
        jlabel=Parser.pc;
        code.write(String.format("%2d ",Parser.jmp));
        code.write("    0\u005cn");
        ++Parser.pc;
        code.write(String.format("%2d ",Parser.label));
        code.write("    0\u005cn");
        ++Parser.pc;
        code.close();
    }catch(IOException e){
        System.err.println("err");
    }
      jj_consume_token(DO);
      Program(arr_table);
      jj_consume_token(END);
try{
        FileWriter code = new FileWriter("code.txt",true);
        code.write(String.format("%2d ",Parser.jmp));
        code.write(String.format("%5d\u005cn",jlabel2));
        ++Parser.pc;
        code.write(String.format("%2d ",Parser.label));
        code.write("    0\u005cn");
        ++Parser.pc;
        code.close();
        RandomAccessFile raf2 = new RandomAccessFile("code.txt","rw");
        for(int i=0;i<9*jlabel-6;i++){
            raf2.read();
        }
        String s2 = String.format("%5d",Parser.pc-1);
        raf2.write(s2.getBytes());
        raf2.close();
    }catch(IOException e){
        System.err.println("err");
    }
      break;
      }
    case VAR:{
      jj_consume_token(VAR);
      token1 = jj_consume_token(VARIABLE);
try{
        arr_table[Parser.count].var = token1.image;
        arr_table[Parser.count].value = 0;
        arr_table[Parser.count].address = Parser.count;
        FileWriter code = new FileWriter("code.txt",true);
        code.write(String.format("%2d ",Parser.push));
        code.write("    0\u005cn");
        ++Parser.pc;
        code.close();
                ++Parser.count;
    }catch(IOException e){
        System.err.println("err");
    }
      break;
      }
    case NOP:{
      jj_consume_token(NOP);
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Op(s_table[] arr_table) throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case PLUS:{
      jj_consume_token(PLUS);
Parser.op_type=0;
      break;
      }
    case MULT:{
      jj_consume_token(MULT);
Parser.op_type=1;
      break;
      }
    case MINUS:{
      jj_consume_token(MINUS);
Parser.op_type=2;
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void f0(s_table[] arr_table) throws ParseException {Token token;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NUMBER:{
      token = jj_consume_token(NUMBER);
try{
        FileWriter code = new FileWriter("code.txt",true);
        code.write(String.format("%2d ",Parser.push));
        code.write(String.format("%5s\u005cn",token.image));
        ++Parser.pc;
        code.close();
    }catch(IOException e){
        System.err.println("err");
    }
      break;
      }
    case VARIABLE:{
      token = jj_consume_token(VARIABLE);
try{
        int address1 = 0;
                FileWriter code = new FileWriter("code.txt",true);
                for(int i=0;i<50;i++){
                        if(arr_table[i].var.equals(token.image)){
                                address1=arr_table[i].address;
                                break;
                        }
                }
        code.write(String.format("%2d ",Parser.load));
        code.write(String.format("%5d\u005cn",address1));
        ++Parser.pc;
        code.close();
    }catch(IOException e){
        System.err.println("err");
    }
      break;
      }
    case LPAREN:{
      jj_consume_token(LPAREN);
      Expression(arr_table);
      jj_consume_token(RPAREN);
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Expression(s_table[] arr_table) throws ParseException {
    f0(arr_table);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:
      case MINUS:
      case MULT:{
        ;
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        break label_2;
      }
      Op(arr_table);
      f0(arr_table);
try{
                FileWriter code = new FileWriter("code.txt",true);
        code.write(String.format("%2d ",Parser.op));
        code.write(String.format("%5d\u005cn",Parser.op_type));
        ++Parser.pc;
        code.close();
         }
         catch(IOException e){
                System.err.println("err");
         }
    }
  }

  static final public void B(s_table[] arr_table) throws ParseException {
    B2(arr_table);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case AND:{
        ;
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        break label_3;
      }
      jj_consume_token(AND);
      B2(arr_table);
    }
  }

  static final public void f1(s_table[] arr_table) throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case GT:{
      jj_consume_token(GT);
      Expression(arr_table);
try{
        FileWriter code = new FileWriter("code.txt",true);
        code.write(String.format("%2d ",Parser.op));
        code.write("    3\u005cn");
        ++Parser.pc;
        code.close();
        }
         catch(IOException e){
                 System.err.println("err");
         }
      break;
      }
    case EQ:{
      jj_consume_token(EQ);
      jj_consume_token(EQ);
      Expression(arr_table);
try{
        FileWriter code = new FileWriter("code.txt",true);
        code.write(String.format("%2d ",Parser.op));
        code.write("    4\u005cn");
        ++Parser.pc;
        code.close();
        }
         catch(IOException e){
                 System.err.println("err");
         }
      break;
      }
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void B2(s_table[] arr_table) throws ParseException {
    jj_consume_token(LPAREN);
    Expression(arr_table);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case EQ:
      case GT:{
        ;
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        break label_4;
      }
      f1(arr_table);
    }
    jj_consume_token(RPAREN);
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public ParserTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[10];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x30000010,0x100000,0x800004,0x30000010,0x380,0x10008,0x380,0x8000000,0x4400,0x4400,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x3,0x0,0x0,0x3,0x0,0x2,0x0,0x0,0x0,0x0,};
   }

  /** Constructor with InputStream. */
  public Parser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public Parser(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new ParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 10; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 10; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public Parser(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new ParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 10; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 10; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public Parser(ParserTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 10; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(ParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 10; i++) jj_la1[i] = -1;
  }

  static private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  static final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  static private int jj_ntk_f() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  static private int[] jj_expentry;
  static private int jj_kind = -1;

  /** Generate ParseException. */
  static public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[34];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 10; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
          if ((jj_la1_1[i] & (1<<j)) != 0) {
            la1tokens[32+j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 34; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  static final public void enable_tracing() {
  }

  /** Disable tracing. */
  static final public void disable_tracing() {
  }

}
